# walkie-ai-server

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  scratch_diag.py
.pytest_cache/v/cache/: nodeids
api/: __init__.py  models.py  utils.py
api/routes/: appearance.py  config.py  config.toml  face_recognition.py  grasp.py  image.py  image_caption.py  image_embed.py  object_detection.py  pose_estimation.py  stt.py  tts.py
docs/: appearance_service_handoff.md
scripts/: benchmark_sam3.py  install_grasp.sh  prefetch_detecty.py  run_app.sh  run_sam3.sh  serve_llm.sh
services/: debug_viewer.py
services/appearance/: __init__.py  appearance.py  base.py
services/appearance/providers/: __init__.py  osnet_model.py  osnet_provider.py
services/face_recognition/: __init__.py  base.py  face_recognition.py
services/face_recognition/providers/: __init__.py  insightface_provider.py
services/grasp/: __init__.py  base.py  grasp.py
services/grasp/providers/: __init__.py  graspnet_provider.py
services/image_caption/providers/: __init__.py  florence2.py  florence2_large.py
services/object_detection/: base.py  object_detection.py
services/object_detection/providers/: __init__.py  detecty.py  sam3.py  yolo.py  yoloe.py
services/pose_estimation/: base.py
services/pose_estimation/providers/: yolo_pose.py
services/stt/providers/: __init__.py  nemo.py  whisper.py
services/tts/providers/: piper_tts.py
tests/: conftest.py  test_appearance.py  test_face_recognition.py  test_florence2_prompt.py  test_grasp.py  test_image.py  test_image_caption.py  test_object_detection.py  test_pose_estimation.py  test_stt.py  test_stt_nemo.py  test_tts.py
voices/: .gitignore
