[project]
name = "walkie-ai-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    # Local NeMo-based ASR (FastConformer -> RNNT) used by the "nemo" STT provider.
    # Editable path dep on Chalk's separate repo (sibling dir). NOTE: do NOT run that
    # repo's setup.sh — it installs a CUDA-nightly torch that would clobber ours.
    "eic-speech-nemo",
    "elevenlabs>=2.43.0",
    "faster-whisper>=1.2.1",
    "flask>=3.1.3",
    "google-cloud-speech>=2.38.0",
    "google-genai>=1.73.1",
    "huggingface-hub>=1.11.0",
    # Face recognition (RetinaFace + ArcFace, 512-d normalized embeddings).
    # Runs on the onnxruntime (CPU) already pulled in transitively. On the GPU
    # box, swap that for onnxruntime-gpu (same `onnxruntime` import) for speed —
    # don't install both at once, they collide. See README "Face recognition".
    "insightface>=0.7.3",
    "pillow>=12.2.0",
    "piper-tts>=1.4.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "timm>=1.0.26",
    "transformers>=5.5.4",
    "ultralytics>=8.4.40",
    "vllm>=0.19.1",
]

[tool.uv.sources]
eic-speech-nemo = { git = "https://github.com/chalkp/eic-speech-nemo.git" }
